Adding CLI mode to GUI build etc.
Open

Adding option to open a state or movie. (A movie could previously be started but not through open)

When opening a state or movie the ISO is selected by ID rather than last used because that's more accurate

Disable the Play and Start Recording options if no ISO is set instead of showing the BrowseForDirectory dialog because that's less confusing

The BootManager is changed to try the default and last iso if an empty string is provided

If a file isn't found the ISO library is searched because that allow a relative path

Benchmark

Adding option to play a movie as a benchmark by running it without a frame limit and measure the frame rate

--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -45,6 +45,7 @@ if(wxWidgets_FOUND)
 				Src/ARCodeAddEdit.cpp
 				Src/AboutDolphin.cpp
 				Src/CheatsWindow.cpp
+				Src/CLI.cpp
 				Src/ConfigMain.cpp
 				Src/Debugger/BreakpointDlg.cpp
 				Src/Debugger/BreakpointView.cpp
@@ -95,7 +96,8 @@ else()
 			 Src/Android/ButtonManager.cpp
 			 Src/MainAndroid.cpp)
 	else()
-		set(SRCS Src/MainNoGUI.cpp)
+		set(SRCS	Src/CLI.cpp
+					Src/MainNoGUI.cpp)
 	endif()
 endif()
 
