--- a/Source/Core/DolphinWX/Dolphin.vcxproj
+++ b/Source/Core/DolphinWX/Dolphin.vcxproj
@@ -221,6 +221,7 @@ xcopy "$(SolutionDir)..\Externals\SDL\$(PlatformName)\*.dll" "$(TargetDir)" /e /
   <ItemGroup>
     <ClCompile Include="Src\AboutDolphin.cpp" />
     <ClCompile Include="Src\ARCodeAddEdit.cpp" />
+    <ClCompile Include="Src\CLI.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointDlg.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointView.cpp" />
     <ClCompile Include="Src\Debugger\BreakpointWindow.cpp" />
@@ -287,6 +288,7 @@ xcopy "$(SolutionDir)..\Externals\SDL\$(PlatformName)\*.dll" "$(TargetDir)" /e /
     <ClInclude Include="resource.h" />
     <ClInclude Include="Src\AboutDolphin.h" />
     <ClInclude Include="Src\ARCodeAddEdit.h" />
+    <ClInclude Include="Src\CLI.h" />
     <ClInclude Include="Src\Debugger\BreakpointDlg.h" />
     <ClInclude Include="Src\Debugger\BreakpointView.h" />
     <ClInclude Include="Src\Debugger\BreakpointWindow.h" />
