Customizations to .gitignore and minor unnecessary updates to project files.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ Externals/scons-local/*
 .DS_Store
 #Ignore transifix configuration directory
 .tx
+
+Externals/*
+Languages/*
+Source/*.vsp
+Source/*.psess
+
+Tools/*
