--- a/Source/Core/Common/SVNRevGen.vcxproj
+++ b/Source/Core/Common/SVNRevGen.vcxproj
@@ -37,7 +37,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PreBuildEvent>
-      <Command>cscript /nologo /E:JScript "make_scmrev.h.js"</Command>
+      <Command>REM cscript /nologo /E:JScript "make_scmrev.h.js"</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
