--- a/Source/Core/Common/Common.vcxproj.filters
+++ b/Source/Core/Common/Common.vcxproj.filters
@@ -54,6 +54,7 @@
     <ClCompile Include="Src\x64CPUDetect.cpp" />
     <ClCompile Include="Src\x64FPURoundMode.cpp" />
     <ClCompile Include="Src\x64Thunk.cpp" />
+    <ClCompile Include="Src\Gekko.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Atomic.h" />
@@ -122,6 +123,7 @@
     <ClInclude Include="Src\StdMutex.h" />
     <ClInclude Include="Src\StdConditionVariable.h" />
     <ClInclude Include="Src\x64ABI.h" />
+    <ClInclude Include="Src\Gekko.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CMakeLists.txt" />
