Bring in xxhash to replace murmur3.
If there's anything platform specific that needs to be handled that I don't know about, my bad.

I was getting help from skidau when doing this, so don't only yell at me if this breaks anything.

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -28,7 +28,8 @@ set(SRCS	Src/BreakPoints.cpp
 			Src/Crypto/bn.cpp
 			Src/Crypto/ec.cpp
 			Src/Crypto/md5.cpp
-			Src/Crypto/sha1.cpp)
+			Src/Crypto/sha1.cpp
+			Src/Crypto/xxhash.cpp)
 
 if(_M_ARM) #ARM
 	set(SRCS	${SRCS}
