--- a/Source/Core/Common/Common.vcxproj
+++ b/Source/Core/Common/Common.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Src\Crypto\ec.cpp" />
     <ClCompile Include="Src\Crypto\md5.cpp" />
     <ClCompile Include="Src\Crypto\sha1.cpp" />
+    <ClCompile Include="Src\Crypto\xxhash.cpp" />
     <ClCompile Include="Src\ExtendedTrace.cpp" />
     <ClCompile Include="Src\FileSearch.cpp" />
     <ClCompile Include="Src\FileUtil.cpp" />
@@ -221,6 +222,7 @@
     <ClInclude Include="Src\Crypto\md5.h" />
     <ClInclude Include="Src\Crypto\sha1.h" />
     <ClInclude Include="Src\Crypto\tools.h" />
+    <ClInclude Include="Src\Crypto\xxhash.h" />
     <ClInclude Include="Src\DebugInterface.h" />
     <ClInclude Include="Src\ExtendedTrace.h" />
     <ClInclude Include="Src\FifoQueue.h" />
