--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -331,7 +331,7 @@
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_net.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_net_ssl.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_sdio_slot0.cpp" />
-    <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb.cpp" />
+    <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh1.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_WiiMote.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_Socket.cpp" />
     <ClCompile Include="Src\x64MemTools.cpp" />
@@ -541,7 +541,7 @@
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_sdio_slot0.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_net_ssl.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_stm.h" />
-    <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb.h" />
+    <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh1.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_kbd.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_WiiMote.h" />
     <ClInclude Include="Src\IPC_HLE\WII_Socket.h" />
