Add a simple intrusive doubly linked list class.
This is not super critical, but is simple enough and comes in handy - it
avoids an allocation and allows an object to be removed from the list
with just the pointer to that object rather than an iterator.

--- a/Source/Core/Common/Common.vcxproj
+++ b/Source/Core/Common/Common.vcxproj
@@ -244,6 +244,7 @@
     <ClInclude Include="Src\FixedSizeQueue.h" />
     <ClInclude Include="Src\Hash.h" />
     <ClInclude Include="Src\IniFile.h" />
+    <ClInclude Include="Src\IntrusiveList.h" />
     <ClInclude Include="Src\LinearDiskCache.h" />
     <ClInclude Include="Src\Log.h" />
     <ClInclude Include="Src\LogManager.h" />
