--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -144,6 +144,7 @@ set(SRCS	Src/ActionReplay.cpp
 			Src/IPC_HLE/WII_IPC_HLE_Device_net.cpp
 			Src/IPC_HLE/WII_IPC_HLE_Device_net_ssl.cpp
 			Src/IPC_HLE/WII_IPC_HLE_Device_sdio_slot0.cpp
+			Src/IPC_HLE/WII_IPC_HLE_Device_usb_hid.cpp
 			Src/IPC_HLE/WII_IPC_HLE_Device_usb_oh0.cpp
 			Src/IPC_HLE/WII_IPC_HLE_Device_usb_oh1.cpp
 			Src/IPC_HLE/WII_IPC_HLE_WiiMote.cpp
