--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -332,6 +332,7 @@
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_net.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_net_ssl.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_sdio_slot0.cpp" />
+    <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_hid.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh0.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh1.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE_WiiMote.cpp" />
@@ -544,6 +545,7 @@
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_sdio_slot0.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_net_ssl.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_stm.h" />
+    <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_hid.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh0.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_oh1.h" />
     <ClInclude Include="Src\IPC_HLE\WII_IPC_HLE_Device_usb_kbd.h" />
