--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -295,6 +295,9 @@
     <ClCompile Include="Src\HW\USBInterface.cpp">
       <Filter>HW %28Flipper/Hollywood%29\USB Interface</Filter>
     </ClCompile>
+    <ClCompile Include="Src\HW\USBReal.cpp">
+      <Filter>HW %28Flipper/Hollywood%29\USB Interface</Filter>
+    </ClCompile>
     <ClCompile Include="Src\HW\VideoInterface.cpp">
       <Filter>HW %28Flipper/Hollywood%29\VI - Video Interface</Filter>
     </ClCompile>
@@ -835,6 +838,9 @@
       <Filter>HW %28Flipper/Hollywood%29\SI - Serial Interface</Filter>
     </ClInclude>
     <ClInclude Include="Src\HW\USBInterface.h">
+      <Filter>HW %28Flipper/Hollywood%29\USB Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\HW\USBReal.h">
       <Filter>HW %28Flipper/Hollywood%29\USB Interface</Filter>
     </ClInclude>
     <ClInclude Include="Src\HW\VideoInterface.h">
